:heavy_check_mark: Сборка #7

--- a/7/index.html
+++ b/7/index.html
@@ -41,7 +41,7 @@
             </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link button" href="#">Хочу сюда!</a>
+            <a class="navigation-link button button-main" href="#">Хочу сюда!</a>
           </li>
         </ul>
       </nav>
@@ -109,7 +109,7 @@
         <h2 class="visually-hidden">Поиск гостиницы.</h2>
         <p class="search-title title">Заинтересовались?</p>
         <p class="search-text text">Укажите предполагаемые даты поездки, <br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <button class="search-button button" type="button">ПОИСК ГОСТИНИЦЫ В седоне</button>
+        <button class="search-button button button-main" type="button">ПОИСК ГОСТИНИЦЫ В седоне</button>
       </section>
 
       <section class="subscription" data-test="subscribe">
