--- a/catalog.html
+++ b/catalog.html
@@ -40,7 +40,7 @@
             </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link button button-main" href="#">Хочу сюда!</a>
+            <a class="navigation-button button button-main" href="#">Хочу сюда!</a>
           </li>
         </ul>
       </nav>
@@ -54,15 +54,8 @@
             <li class="breadcrumbs-item">
               <a class="breadcrumbs-link" href="index.html">
                 <svg xmlns="http://www.w3.org/2000/svg" width="14" height="15" fill="currentColor"  aria-hidden="true" focusable="false">
-                  <g clip-path="url(#a)">
-                    <path d="m7.371.5-6 5.8v6.2h12V6.3l-6-5.8Zm5 11h-10V6.7l5-4.8 5 4.8v4.8Z"/>
-                    <path d="M5.371 10.5h1V8h2v2.5h1V7h-4v3.5Z"/>
-                  </g>
-                  <defs>
-                    <clipPath id="a">
-                      <path d="M.871 0h13v15h-13z"/>
-                    </clipPath>
-                  </defs>
+                  <path d="m7.371.5-6 5.8v6.2h12V6.3l-6-5.8Zm5 11h-10V6.7l5-4.8 5 4.8v4.8Z"/>
+                  <path d="M5.371 10.5h1V8h2v2.5h1V7h-4v3.5Z"/>
                 </svg>
                 <span class="visually-hidden">Перейти на главную страницу.</span>
               </a>
@@ -98,7 +91,7 @@
             </fieldset>
 
             <fieldset class="catalog-filter-group">
-              <legend class="catalog-filter-title">Тип жилья:</legend>
+              <legend class="catalog-filter-title">Тип Жилья:</legend>
               <ul class="catalog-filter-list">
                 <li class="catalog-filter-item">
                   <label class="control">
