--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link button button-main" href="#">Хочу сюда!</a>
+            <a class="navigation-button button button-main" href="#">Хочу сюда!</a>
           </li>
         </ul>
       </nav>
