--- a/catalog.html
+++ b/catalog.html
@@ -260,7 +260,7 @@
             <a class="pagination-link" href="#">4</a>
           </li>
           <li class="pagination-item">
-            <a class="pagination-link dots" href="#">...</a>
+            <a class="pagination-link dots">...</a>
           </li>
           <li class="pagination-item">
             <a class="pagination-link" href="#">10</a>
