--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <ul class="recommendation-list">
           <li class="recommendation-item light-background">
             <h3 class="recommendation-name">Жильё</h3>
-            <p class="recommendation-description">Рекомендуем пожить в&nbspнастоящем мотеле, <br>всё как в кино!</p>
+            <p class="recommendation-description">Рекомендуем пожить в&nbsp;настоящем мотеле, <br>всё как в кино!</p>
           </li>
           <li class="recommendation-item">
             <h3 class="recommendation-name">Еда</h3>
@@ -99,7 +99,7 @@
           </li>
           <li class="recommendation-item light-background">
             <h3 class="recommendation-name">Сувениры</h3>
-            <p class="recommendation-description">Не только китайского, но&nbspи&nbspнастоящего местного производства!</p>
+            <p class="recommendation-description">Не только китайского, но&nbsp;и&nbsp;настоящего местного производства!</p>
           </li>
         </ul>
       </section>
