--- a/7/catalog.html
+++ b/7/catalog.html
@@ -62,7 +62,7 @@
               </a>
             </li>
             <li class="breadcrumbs-item">
-              <a class="breadcrumbs-link" href="catalog.html" aria-current="page">Гостиницы</a>
+              <a class="breadcrumbs-link breadcrumbs-link-current" aria-current="page">Гостиницы</a>
             </li>
           </ol>
         </header>
@@ -168,7 +168,7 @@
 
         <ul class="hotels-list hotel">
           <li class="hotel-card">
-            <a class="hotel-link" href="#">
+            <a class="hotel-link" href="#" tabindex="-1">
               <img class="hotel-image" src="images/catalog/hotel-1.jpg" alt="Вид из гостиницы Amara Resort & Spa." width="300" height="212">
             </a>
             <a class="hotel-link" href="#">
@@ -185,7 +185,7 @@
           </li>
 
           <li class="hotel-card">
-            <a class="hotel-link" href="#">
+            <a class="hotel-link" href="#" tabindex="-1">
               <img class="hotel-image" src="images/catalog/hotel-2.jpg" alt="Вид из гостиницы Villas at Poco Diablo." width="300" height="212">
             </a>
 
@@ -206,7 +206,7 @@
           </li>
 
           <li class="hotel-card">
-            <a class="hotel-link" href="#">
+            <a class="hotel-link" href="#" tabindex="-1">
               <img class="hotel-image" src="images/catalog/hotel-3.jpg" alt="Вид из гостиницы Desert Quail Inn." width="300" height="212">
             </a>
 
@@ -227,7 +227,7 @@
           </li>
 
           <li class="hotel-card">
-            <a class="hotel-link" href="#">
+            <a class="hotel-link" href="#" tabindex="-1">
               <img class="hotel-image" src="images/catalog/hotel-4.jpg" alt="Вид из гостиницы GreenTree Inn." width="300" height="212">
             </a>
 
@@ -249,7 +249,7 @@
 
         <ul class="pagination">
           <li class="pagination-item">
-            <a class="pagination-link pagination-current">1</a>
+            <a class="pagination-link pagination-current" aria-current="page">1</a>
           </li>
           <li class="pagination-item">
             <a class="pagination-link" href="#">2</a>
