--- a/8/index.html
+++ b/8/index.html
@@ -188,19 +188,19 @@
               <label class="search-field-label" for="adults">Взрослые:</label>
 
               <div class="wrapper-field-count">
-                <button class="number-button number-button-minus" type="button">
+                <button class="count-button count-button-minus" type="button">
                   <span class="visually-hidden">Уменьшить количество.</span>
-                  <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M3 9V11H17V9H3Z" fill="#756157" fill-opacity="0.3"/>
+                  <svg class="count-button-icon" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M3 9V11H17V9H3Z"/>
                   </svg>
                 </button>
 
-                <input class="search-form-count field" type="number" id="adults" name="adults" value="2">
+                <input class="count-field field" type="number" id="adults" name="adults" value="2">
 
-                <button class="number-button number-button-plus" type="button">
+                <button class="count-button count-button-plus" type="button">
                   <span class="visually-hidden">Увеличить количество.</span>
-                  <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M17 9H11V3H9V9H3V11H9V17H11V11H17V9Z" fill="#756157" fill-opacity="0.3"/>
+                  <svg class="count-button-icon" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M17 9H11V3H9V9H3V11H9V17H11V11H17V9Z"/>
                   </svg>
                 </button>
               </div>
@@ -216,19 +216,19 @@
               </span>
 
               <div class="wrapper-field-count">
-                <button class="number-button number-button-minus" type="button">
+                <button class="count-button count-button-minus" type="button">
                   <span class="visually-hidden">Уменьшить количество.</span>
-                  <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M3 9V11H17V9H3Z" fill="#756157" fill-opacity="0.3"/>
+                  <svg class="count-button-icon" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M3 9V11H17V9H3Z"/>
                   </svg>
                 </button>
 
-                <input class="search-form-count field" type="number" id="children" name="adults" value="2">
+                <input class="count-field field" type="number" id="children" name="adults" value="2">
 
-                <button class="number-button number-button-plus" type="button">
+                <button class="count-button count-button-plus" type="button">
                   <span class="visually-hidden">Увеличить количество.</span>
-                  <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M17 9H11V3H9V9H3V11H9V17H11V11H17V9Z" fill="#756157" fill-opacity="0.3"/>
+                  <svg class="count-button-icon" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M17 9H11V3H9V9H3V11H9V17H11V11H17V9Z"/>
                   </svg>
                 </button>
               </div>
