:heavy_check_mark: Сборка #8

--- a/8/index.html
+++ b/8/index.html
@@ -174,13 +174,13 @@
 
             <div class="search-field search-field-date">
               <label class="search-field-label" for="date-arrival">Дата заезда:</label>
-              <input class="field" type="text" id="date-arrival" name="date-arrival" placeholder="27 апреля 2020">
+              <input class="field" type="text" id="date-arrival" name="date-arrival" value="27 апреля 2020" placeholder="Укажите дату">
               <span class="field-message field-message-error">Мы не можем отправить вас в прошлое.</span>
             </div>
 
             <div class="search-field search-field-date">
               <label class="search-field-label" for="date-departure">Дата выезда:</label>
-              <input class="field" type="text" id="date-departure" name="date-departure" placeholder="1 сентября 2023">
+              <input class="field" type="text" id="date-departure" name="date-departure" value="1 сентября 2023" placeholder="Укажите дату">
               <span class="field-message">На эти даты есть свободные номера. Пока есть.</span>
             </div>
 
