--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <p class="subscription-text text">Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="subscription-form" action="https://echo.htmlacademy.ru/" method="post">
           <input class="subscription-email" type="email" name="subscription-email" id="subscription-email"
-            placeholder="Ваш e-mail" required>
+            placeholder="Ваш e-mail">
           <button class="subscription-button button button-dark" type="submit">Подписаться</button>
         </form>
       </section>
