правки для автоматической проверки

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </ul>
       </section>
 
-      <section class="recommendation">
+      <section class="recommendation" data-test="service">
         <h2 class="recommendation-title title">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
         <p class="recommendation-text text">Опытный персонал и качественное обслуживание!</p>
         <ul class="recommendation-list">
