--- a/modal.html
+++ b/modal.html
@@ -164,7 +164,7 @@
     </footer>
 
     <div class="modal-container">
-      <div class="modal modal-search">
+      <div class="modal modal-search" data-test="modal">
         <button class="modal-close-button" type="button">
           <span class="visually-hidden">Закрыть</span>
         </button>
