--- a/modal.html
+++ b/modal.html
@@ -224,7 +224,7 @@
                   </svg>
                 </button>
 
-                <input class="count-field field" type="number" id="children" name="adults" value="2">
+                <input class="count-field field" type="number" id="children" name="children" value="2">
 
                 <button class="count-button count-button-plus" type="button">
                   <span class="visually-hidden">Увеличить количество.</span>
